--- a/doc/cha-intro-tls.texi
+++ b/doc/cha-intro-tls.texi
@@ -435,9 +435,9 @@ NORMAL:-VERS-TLS-ALL:+VERS-TLS1.0:+VERS-SSL3.0:%COMPAT
 @end verbatim
 This priority string will only enable SSL 3.0 and TLS 1.0 as protocols and
 will disable, via the @code{%COMPAT} keyword, several @acronym{TLS} protocol
-options that are known to cause compatibility problems.
-We suggest however only to use this mode if compatibility is preferred over
-security.
+options that are known to cause compatibility problems. Note however that
+there are known attacks against those protocol versions and
+if mode is used security is traded for compatibility.
 
 @node TLS Extensions
 @section TLS extensions
