--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ See the end for copying conditions.
 
 * Version 3.0.4 (released 2011-10-15)
 
+** libgnutls-extra: gnutls_register_md5_handler() was
+removed.
+
 ** gnutls-cli-debug: Added more tests including AES-GCM,
 SHA256 and elliptic curves.
 
