--- a/THANKS
+++ b/THANKS
@@ -120,6 +120,7 @@ Dan Winship                     *danw [at] gnome.org*
 Jonathan Nieder                 *jrnider [at] gmail.com*
 J. Cameijo Cerdeira             *cerdeira [at] co.sapo.pt*
 Benjamin Hof                    *benjamin.hof [at] stusta.net*
+Vincent Untz                    *vuntz [at] gnome.org*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
