--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.5 (unreleased)
+
+** libgnutls: Corrected bug in gnutls_x509_data2hex. Report and fix by
+Vincent Untz.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.4 (released 2011-10-15)
 
 ** libgnutls-extra: gnutls_register_md5_handler() was
