--- a/THANKS
+++ b/THANKS
@@ -121,6 +121,7 @@ Jonathan Nieder                 *jrnider [at] gmail.com*
 J. Cameijo Cerdeira             *cerdeira [at] co.sapo.pt*
 Benjamin Hof                    *benjamin.hof [at] stusta.net*
 Vincent Untz                    *vuntz [at] gnome.org*
+Jan Misiak                      *fijam@archlinux.us*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
