--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.6 (unreleased)
+
+** gnutls-guile: Compilation fixes.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.5 (released 2011-10-27)
 
 ** libgnutls-extra: is no more
