--- a/doc/gnutls-guile.texi
+++ b/doc/gnutls-guile.texi
@@ -83,11 +83,13 @@ a large subset thereof is available.
 @node Guile Preparations
 @chapter Guile Preparations
 
-The GnuTLS Guile bindings are by default installed under the GnuTLS
-installation directory (e.g., typically
-@file{/usr/local/share/guile/site/}).  Normally Guile will not find
-the module there without help.  You may experience something like
-this:
+The GnuTLS Guile bindings are available for both the 1.8 and 2.0 stable
+series of Guile.
+
+By default they are installed under the GnuTLS installation directory,
+typically @file{/usr/local/share/guile/site/}).  Normally Guile
+will not find the module there without help.  You may experience
+something like this:
 
 @example
 $ guile
