--- a/THANKS
+++ b/THANKS
@@ -123,6 +123,7 @@ Benjamin Hof                    *benjamin.hof [at] stusta.net*
 Vincent Untz                    *vuntz [at] gnome.org*
 Jan Misiak                      *fijam [at] archlinux.us*
 David Hoyt                      *hoyt6 [at] llnl.gov*
+Joseph Graham                   *joe [at] t67.eu*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
