--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,17 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+Version 2.12.13 (released 2011-11-07)
+
+** minitasn1: Upgraded to libtasn1 version 2.10.
+
+** libgnutls: Fixed possible buffer overflow in 
+gnutls_session_get_data(). Reported and fix by Alban Crequy.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 Version 2.12.12 (released 2011-10-20)
 
 ** gnulib: updated
