updated to include padlock.

--- a/lib/accelerated/x86/README
+++ b/lib/accelerated/x86/README
@@ -1,3 +1,3 @@
-The AES-NI implementation by Andy Polyakov is not part of the GnuTLS library, but is 
-used with GnuTLS. Its license is included in license.txt.
+The AES-NI and Padlock implementation by Andy Polyakov is not part of the GnuTLS library, but is 
+used with GnuTLS. Their license is included in license.txt.
 
