--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,13 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.8 (unreleased)
+
+** doc: man pages for API functions were removed.
+The reason was that the code that auto-generated the man pages missed
+many APIs and we couldn't fix it (volunteers welcome).  See the info
+manual or the GTK-DOC manual instead.
+
 * Version 3.0.7 (released 2011-11-08)
 
 ** libgnutls: Corrected fix in gnutls_session_get_data()
